# muat

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-main.yml  build.yml  ci.yml  default.yml  release.yml
crates/atproto-cli/: Cargo.toml  README.md  build.rs
crates/atproto-cli/docs/prd/: 001 - Atproto.md
crates/atproto-cli/src/: cli.rs  main.rs  output.rs
crates/atproto-cli/src/commands/: mod.rs
crates/atproto-cli/src/commands/pds/: create_account.rs  create_record.rs  delete_record.rs  get_record.rs  list_records.rs  login.rs  mod.rs  refresh_token.rs  remove_account.rs  subscribe.rs  whoami.rs
crates/atproto-cli/src/session/: mod.rs  storage.rs  types.rs
crates/atproto-cli/tests/: bluesky_pds.rs  file_pds.rs  integration.rs
crates/atproto-cli/tests/common/: mod.rs
crates/muat/: Cargo.toml  README.md
crates/muat-core/: Cargo.toml  README.md
crates/muat-core/docs/: Invariants.md
crates/muat-core/src/: credentials.rs  error.rs  lib.rs  tokens.rs
crates/muat-core/src/repo/: record_value.rs
crates/muat-core/src/traits/: firehose.rs  mod.rs  pds.rs  session.rs
crates/muat-core/src/types/: at_uri.rs  did.rs  nsid.rs  pds_url.rs  rkey.rs
crates/muat-file/: Cargo.toml  README.md
crates/muat-file/src/: firehose.rs  lib.rs  pds.rs  session.rs  store.rs
crates/muat-xrpc/: Cargo.toml  README.md
crates/muat-xrpc/src/: firehose.rs  lib.rs  pds.rs  session.rs
crates/muat-xrpc/src/xrpc/: client.rs  endpoints.rs  mod.rs
crates/muat-xrpc/tests/: mock_pds.rs
crates/muat/docs/: Invariants.md
crates/muat/docs/prd/: 001 - Core Library.md
crates/muat/src/: error.rs  lib.rs
crates/muat/src/account/: mod.rs  tokens.rs
crates/muat/src/auth/: credentials.rs  mod.rs  session.rs
crates/muat/src/backend/: file.rs  mod.rs  xrpc.rs
crates/muat/src/pds/: file.rs  firehose.rs  mod.rs  session.rs
crates/muat/src/pds/xrpc/: client.rs  mod.rs
crates/muat/src/repo/: events.rs  mod.rs  record_value.rs  streaming.rs  types.rs
crates/muat/src/types/: at_uri.rs  did.rs  mod.rs  nsid.rs  pds_url.rs  rkey.rs
crates/muat/src/xrpc/: client.rs  endpoints.rs  mod.rs
crates/muat/tests/: mock_pds.rs
docs/archive/plans/: 002-atproto-cli-implementation.md  003-hardening-tests.md
docs/archive/prd/: 002 - Atproto.md  003 - Tests.md  006 - Local filesystem PDS.md  007 - PDS backend unification.md
docs/plans/: 001-muat-implementation.md  002-atproto-cli-implementation.md  004-versioning-ci-releases.md  005-record-value-strict-types.md  006-local-filesystem-pds.md
docs/prd/: 001 - Core Library.md  002 - Atproto.md  003 - Tests.md  004 - Releases.md  005 - Strict types and create record.md  006 - Local filesystem PDS.md  007 - PDS backend unification.md  008 - Uniform Firehose Subscription.md  009 - Backend Split, Tokens, Coverage.md
