[workspace]
resolver = "2"
members = [
    "crates/muat",
    "crates/atproto-cli",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sjmelia/muat"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
