[package]
name = "atproto-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for AT Protocol PDS exploration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sjmelia/muat"
keywords = ["atproto", "bluesky", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "atproto"
path = "src/main.rs"

[dependencies]
muat-core = { path = "../muat-core" }
muat-file = { path = "../muat-file" }
muat-xrpc = { path = "../muat-xrpc" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
directories = "5"
anyhow = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
async-trait = "0.1"

[build-dependencies]
# No dependencies needed - build.rs uses only std

[dev-dependencies]
tempfile = "3"
