[package]
name = "muat-core"
version = "0.1.0"
edition = "2024"
description = "Core types and traits for the muat AT Protocol toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sjmelia/muat"
keywords = ["atproto", "bluesky", "decentralized"]
categories = ["api-bindings", "network-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
futures-core = "0.3"

[dev-dependencies]
serde_json = { workspace = true }
