[package]
name = "muat-file"
version = "0.1.0"
edition = "2024"
description = "Filesystem-backed PDS implementation for muat"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sjmelia/muat"
keywords = ["atproto", "bluesky", "decentralized"]
categories = ["api-bindings", "network-programming"]

[dependencies]
muat-core = { path = "../muat-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
async-stream = "0.3"
futures-util = "0.3"
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
bcrypt = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
