[package]
name = "muat"
version = "0.1.0"
edition = "2024"
description = "Core AT Protocol library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbit/orbit"
keywords = ["atproto", "bluesky", "decentralized"]
categories = ["api-bindings", "network-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = { version = "2", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
fs2 = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tempfile = "3"
